// Copyright 2025 The Ray Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//  http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package ray.rpc;

option java_package = "io.ray.runtime.generated";

message ProfileEventEntry {
  // The start timestamp of the event time.
  int64 start_time = 1;
  // The end timestamp of the event. Empty if it's a point event, e.g. TaskStatus
  // change.
  int64 end_time = 2;
  // Additional data associated with the event. This data must be serialized
  // using JSON.
  optional string extra_data = 3;
  // Customized event name if not a TaskStatus change point event.
  string event_name = 4;
}

message ProfileEvents {
  // The type of the component that generated the event, e.g., worker or
  // object_manager, or node_manager.
  string component_type = 1;
  // An identifier for the component that generated the event.
  bytes component_id = 2;
  // Node IP address.
  string node_ip_address = 3;
  // Events.
  repeated ProfileEventEntry events = 4;
}
